# s3pd-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
dependencies/: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  s3copy.cpp  s3copy.h
